Modificacion pom, pantalla crear partida, correccion boton login

--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,12 @@
 
 	<developers>
 		<developer>
-			<name>JAParejo</name>
-			<email>japarejo@gmail.com</email>
-			<url>http://www.isa.us.es</url>
+			<id>javramnun</id>
+			<name>Javier Ramirez</name>
+			<email>javramnun@alum.us.es</email>
+			<roles>
+				<role>developer</role>
+			</roles>
 		</developer>
 	</developers>
 
